--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.35.0",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
     "next": "14.2.15",
     "react": "18.3.1",
     "react-dom": "18.3.1"
